MyTestBeam_Geant4Simu/err.err
[3;J[H[2Jmake[1]: Entering directory `/home/jongho/Analysis/Strasbourg/MyTestBeam_Geant4Simu/MimosaSimu'
Cleaning up ...
make[1]: Leaving directory `/home/jongho/Analysis/Strasbourg/MyTestBeam_Geant4Simu/MimosaSimu'
make[1]: Entering directory `/home/jongho/Analysis/Strasbourg/MyTestBeam_Geant4Simu/MimosaSimu'
Making dependency for file MimosaSimu.cc ...
Making dependency for file src/MimosaSimuTrackerHit.cc ...
Making dependency for file src/MimosaSimuPrimaryGeneratorAction.cc ...
Making dependency for file src/MimosaSimuEventAction.cc ...
Making dependency for file src/MimosaSimuRunAction.cc ...
Making dependency for file src/MimosaSimuTrajectoryHit.cc ...
Making dependency for file src/MimosaSimuTrackerSD.cc ...
Making dependency for file src/MimosaSimuDetectorConstruction.cc ...
Making dependency for file src/MimosaSimuSetup.cc ...
Making dependency for file src/MimosaSimuTrajectorySD.cc ...
Making dependency for file src/MimosaSimuFieldMessenger.cc ...
Making dependency for file src/MimosaSimuHistoManager.cc ...
Making dependency for file src/MimosaSimuFieldSetup.cc ...
Making dependency for file src/MimosaSimuDetectorMessenger.cc ...
Making dependency for file src/MimosaSimuActionInitialization.cc ...
make[1]: Leaving directory `/home/jongho/Analysis/Strasbourg/MyTestBeam_Geant4Simu/MimosaSimu'
Compiling MimosaSimuActionInitialization.cc ...

src/MimosaSimuHistoManager.cc: In member function ‘void MimosaSimuHistoManager::DigitizeHit(int, MimosaSimuHistoManager::AParticleHits_t&)’:
src/MimosaSimuHistoManager.cc:789:42: error: ‘class DIGIT_B2’ has no member named ‘SetEffectiveEpi’
     ListOfSensitivePlanes[idx_SD].digit->SetEffectiveEpi(TheCurrentEpi);
                                          ^
src/MimosaSimuHistoManager.cc:813:42: error: ‘class DIGIT_B2’ has no member named ‘SetEffectiveEpi’
     ListOfSensitivePlanes[idx_SD].digit->SetEffectiveEpi(TheNominalEpi);
                                          ^
src/MimosaSimuHistoManager.cc:821:45: error: ‘class DIGIT_B2’ has no member named ‘GetAnalysisMode’
     if(ListOfSensitivePlanes[idx_SD].digit->GetAnalysisMode() == 3 && fDigitalChargeMap[ipix] == 0) continue;
                                             ^
src/MimosaSimuHistoManager.cc:843:68: error: ‘class DIGIT_B2’ has no member named ‘GetCalib’
     TheAnalogCherge        *= ListOfSensitivePlanes[idx_SD].digit->GetCalib();                      // Use calibration to conver noise from electrons to volts
                                                                    ^
src/MimosaSimuHistoManager.cc:844:68: error: ‘class DIGIT_B2’ has no member named ‘ConvertToADC’
     TheAnalogCherge         = ListOfSensitivePlanes[idx_SD].digit->ConvertToADC(TheAnalogCherge);   // Convert noise in volts to ADC units
                                                                    ^
src/MimosaSimuHistoManager.cc: In member function ‘void MimosaSimuHistoManager::FillPixelsFromNoise(std::vector<MimosaSimuHistoManager::AHitPixels_t>&)’:
src/MimosaSimuHistoManager.cc:870:45: error: ‘class DIGIT_B2’ has no member named ‘GetAnalysisMode’
     if(ListOfSensitivePlanes[iplane].digit->GetAnalysisMode() == 2)       FillPixelsFromNoise_Analog(iplane,ListOfPixels);
                                             ^
src/MimosaSimuHistoManager.cc:871:50: error: ‘class DIGIT_B2’ has no member named ‘GetAnalysisMode’
     else if(ListOfSensitivePlanes[iplane].digit->GetAnalysisMode() == 3)  FillPixelsFromNoise_Digital(iplane,ListOfPixels);
                                                  ^
src/MimosaSimuHistoManager.cc: In member function ‘void MimosaSimuHistoManager::FillPixelsFromNoise_Analog(int, std::vector<MimosaSimuHistoManager::AHitPixels_t>&)’:
src/MimosaSimuHistoManager.cc:889:61: error: ‘class DIGIT_B2’ has no member named ‘GetCalib’
   TheNoise          /= ListOfSensitivePlanes[idx_SD].digit->GetCalib();               // Use calibration to conver noise from electrons to volts
                                                             ^
src/MimosaSimuHistoManager.cc:890:61: error: ‘class DIGIT_B2’ has no member named ‘ConvertToADC’
   TheNoise           = ListOfSensitivePlanes[idx_SD].digit->ConvertToADC(TheNoise);   // Convert noise in volts to ADC units
                                                             ^
src/MimosaSimuHistoManager.cc: In member function ‘void MimosaSimuHistoManager::InitSensitivePlaneList()’:
src/MimosaSimuHistoManager.cc:1054:47: error: no matching function for call to ‘DIGIT_B2::SetSensorParameters(double&, double&, double&, double&, int&, int&, double&, double&, int&, int&, TString&, double&, int&, double&, double&)’
             aADCbits,aADCRangeMin,aADCRangeMax);
                                               ^
src/MimosaSimuHistoManager.cc:1054:47: note: candidate is:
In file included from include/MimosaSimuHistoManager.hh:53:0,
                 from src/MimosaSimuHistoManager.cc:35:
include/digit_b2.h:112:13: note: void DIGIT_B2::SetSensorParameters(Double_t, Double_t, Double_t, Double_t, Int_t, Double_t, Double_t, Double_t, Int_t, TString)
   void      SetSensorParameters(Double_t  aPitchU,       Double_t  aPitchV,
             ^
include/digit_b2.h:112:13: note:   candidate expects 10 arguments, 15 provided
src/MimosaSimuHistoManager.cc: In member function ‘void MimosaSimuHistoManager::FillMimosaBlock()’:
src/MimosaSimuHistoManager.cc:1205:44: error: ‘class DIGIT_B2’ has no member named ‘GetAnalysisMode’
    if(ListOfSensitivePlanes[idx_SD].digit->GetAnalysisMode() == 2 && PixelAnalogCharge[PixelNbCount] > MyTrhe*ListOfSensitivePlanes[idx_SD].digit->GetNoiseElectrons()) MyMult++;
                                            ^
src/MimosaSimuHistoManager.cc:1213:44: error: ‘class DIGIT_B2’ has no member named ‘GetAnalysisMode’
    if(ListOfSensitivePlanes[idx_SD].digit->GetAnalysisMode() == 2) weighting_factor = PixelAnalogCharge[PixelNbCount];
                                            ^
src/MimosaSimuHistoManager.cc:1226:49: error: ‘class DIGIT_B2’ has no member named ‘GetAnalysisMode’
         if(ListOfSensitivePlanes[idx_SD].digit->GetAnalysisMode() == 3) MyMult = HitNPixels[HitNbCount];
                                                 ^
make[1]: *** [/home/jongho/geant4_workdir/tmp/Linux-g++/MimosaSimu/MimosaSimuHistoManager.o] 오류 1
